--- a/test-output/old/JagdPantherSuit/methods.html
+++ b/test-output/old/JagdPantherSuit/methods.html
@@ -1,12 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>JagdPantherSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79e8cb">  <td>15/02/04 17:51:53</td>   <td>0</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@4b520ea8]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@755210740</td>   <td></td> </tr>
-<tr bgcolor="9d97b0">  <td>15/02/04 17:51:55</td>   <td>2404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@34bde49d]">createProgram</td> 
-  <td>main@755210740</td>   <td></td> </tr>
-<tr bgcolor="9d97b0">  <td>15/02/04 17:51:59</td>   <td>6559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@34bde49d]">createProgram</td> 
-  <td>main@755210740</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>15/02/04 17:52:05</td>   <td>12015</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@4b520ea8]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@755210740</td>   <td></td> </tr>
+<tr bgcolor="79e8cb">  <td>15/02/05 14:32:11</td>   <td>0</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@3932c79a]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="9d97b0">  <td>15/02/05 14:32:14</td>   <td>2820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@6f15d60e]">createProgram</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="9d97b0">  <td>15/02/05 14:32:18</td>   <td>6822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@6f15d60e]">createProgram</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>15/02/05 14:32:22</td>   <td>10399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@20b2475a]">createPeriod</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>15/02/05 14:32:38</td>   <td>26531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@20b2475a]">createPeriod</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="e9ab6f">  <td>15/02/05 14:32:44</td>   <td>33093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@210ab13f]">createApplicant</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="e9ab6f">  <td>15/02/05 14:32:50</td>   <td>38814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@210ab13f]">createApplicant</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>15/02/05 14:32:56</td>   <td>44930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@7857fe2]">createNewStage</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>15/02/05 14:33:00</td>   <td>48562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@7857fe2]">createNewStage</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="eda0e0">  <td>15/02/05 14:33:03</td>   <td>51881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@1be2019a]">createNewUser</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="eda0e0">  <td>15/02/05 14:33:07</td>   <td>56177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@1be2019a]">createNewUser</td> 
+  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="79e8cb">  <td>15/02/05 14:33:13</td>   <td>62230</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@3932c79a]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@221111433</td>   <td></td> </tr>
 </table>
