--- a/test-output/old/JagdPantherSuit/classes.html
+++ b/test-output/old/JagdPantherSuit/classes.html
@@ -26,6 +26,10 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>deleteData</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>test.VerifyIfPeriodWasCreated</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -39,6 +43,10 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>createProgram</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
@@ -47,6 +55,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteData</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>test.VerifyIfProgramWasCreated</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -70,6 +82,10 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>deleteData</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>test.VerifyIfApplicantWasCreated</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -83,6 +99,10 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>createProgram</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
@@ -91,6 +111,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteData</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>test.VerifyIfUserWasCreated</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -113,4 +137,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteData</td>
+<td>&nbsp;</td></tr>
 </table>
