--- a/test-output/old/JagdPantherSuit/methods-alphabetical.html
+++ b/test-output/old/JagdPantherSuit/methods-alphabetical.html
@@ -1,28 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>JagdPantherSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9ab6f">  <td>15/02/05 14:32:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@210ab13f]">createApplicant</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="e9ab6f">  <td>15/02/05 14:32:50</td>   <td>5721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@210ab13f]">createApplicant</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="70c169">  <td>15/02/05 14:32:56</td>   <td>11837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@7857fe2]">createNewStage</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="70c169">  <td>15/02/05 14:33:00</td>   <td>15469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@7857fe2]">createNewStage</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="eda0e0">  <td>15/02/05 14:33:03</td>   <td>18788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@1be2019a]">createNewUser</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="eda0e0">  <td>15/02/05 14:33:07</td>   <td>23084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@1be2019a]">createNewUser</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="6369c4">  <td>15/02/05 14:32:22</td>   <td>-22694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@20b2475a]">createPeriod</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="6369c4">  <td>15/02/05 14:32:38</td>   <td>-6562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@20b2475a]">createPeriod</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="9d97b0">  <td>15/02/05 14:32:14</td>   <td>-30273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@6f15d60e]">createProgram</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="9d97b0">  <td>15/02/05 14:32:18</td>   <td>-26271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@6f15d60e]">createProgram</td> 
-  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>15/02/05 14:32:11</td>   <td>-33093</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@3932c79a]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@221111433</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>15/02/05 14:33:13</td>   <td>29137</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@3932c79a]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@221111433</td>   <td></td> </tr>
+<tr bgcolor="e9ab6f">  <td>15/02/06 16:09:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@387a8303]">createApplicant</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="e9ab6f">  <td>15/02/06 16:09:58</td>   <td>7389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@387a8303]">createApplicant</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>15/02/06 16:10:06</td>   <td>15173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@126253fd]">createNewStage</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>15/02/06 16:10:11</td>   <td>19953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@126253fd]">createNewStage</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="eda0e0">  <td>15/02/06 16:10:16</td>   <td>24768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@475c9c31]">createNewUser</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="eda0e0">  <td>15/02/06 16:10:22</td>   <td>30812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@475c9c31]">createNewUser</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>15/02/06 16:09:25</td>   <td>-25523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@7eecb5b8]">createPeriod</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>15/02/06 16:09:43</td>   <td>-7522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@7eecb5b8]">createPeriod</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="9d97b0">  <td>15/02/06 16:09:15</td>   <td>-36023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@57db2b13]">createProgram</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="9d97b0">  <td>15/02/06 16:09:20</td>   <td>-30795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@57db2b13]">createProgram</td> 
+  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>15/02/06 16:09:25</td>   <td>-25711</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@7eecb5b8]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="e9ab6f">  <td>15/02/06 16:09:51</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@387a8303]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="9d97b0">  <td>15/02/06 16:09:25</td>   <td>-25723</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@57db2b13]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>15/02/06 16:09:51</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@7eecb5b8]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="e9ab6f">  <td>15/02/06 16:10:06</td>   <td>14990</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@387a8303]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>15/02/06 16:10:16</td>   <td>24717</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@126253fd]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="eda0e0">  <td>15/02/06 16:10:28</td>   <td>37017</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@475c9c31]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="79e8cb">  <td>15/02/06 16:09:11</td>   <td>-39531</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@58e1d9d]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
+<tr bgcolor="79e8cb">  <td>15/02/06 16:10:28</td>   <td>37098</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@58e1d9d]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@596910004</td>   <td></td> </tr>
 </table>
