--- a/test-output/old/JagdPantherSuit/methods.html
+++ b/test-output/old/JagdPantherSuit/methods.html
@@ -1,36 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>JagdPantherSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6481f5">  <td>15/02/10 21:40:06</td>   <td>0</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@480d3575]">&gt;&gt;init</td> 
+<tr bgcolor="6481f5">  <td>15/02/11 15:35:06</td>   <td>0</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@480d3575]">&gt;&gt;init</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/10 21:40:09</td>   <td>2331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/10 21:40:09</td>   <td>2357</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/10 21:40:09</td>   <td>2690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">createPeriod</td> 
+<tr bgcolor="d4b5b8">  <td>15/02/11 15:35:10</td>   <td>3618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/10 21:40:27</td>   <td>20619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">createPeriod</td> 
+<tr bgcolor="d4b5b8">  <td>15/02/11 15:35:14</td>   <td>8157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/10 21:40:34</td>   <td>27276</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">&lt;&lt;deleteData</td> 
+<tr bgcolor="d4b5b8">  <td>15/02/11 15:35:18</td>   <td>11650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/10 21:40:34</td>   <td>27284</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
+<tr bgcolor="aa7090">  <td>15/02/11 15:35:18</td>   <td>11706</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">&gt;&gt;createProgram</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/10 21:40:34</td>   <td>27290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
+<tr bgcolor="aa7090">  <td>15/02/11 15:35:18</td>   <td>12180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">createPeriod</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/10 21:40:41</td>   <td>35011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
+<tr bgcolor="aa7090">  <td>15/02/11 15:35:30</td>   <td>23868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">createPeriod</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/10 21:40:48</td>   <td>41298</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
+<tr bgcolor="aa7090">  <td>15/02/11 15:35:41</td>   <td>34859</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">&lt;&lt;deleteData</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/10 21:40:48</td>   <td>41572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/10 21:40:54</td>   <td>47264</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
+<tr bgcolor="78ef96">  <td>15/02/11 15:35:41</td>   <td>34861</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/10 21:40:54</td>   <td>47328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
+<tr bgcolor="78ef96">  <td>15/02/11 15:35:41</td>   <td>35195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/10 21:40:59</td>   <td>52481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
+<tr bgcolor="78ef96">  <td>15/02/11 15:35:54</td>   <td>47530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/10 21:41:05</td>   <td>58650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
+<tr bgcolor="78ef96">  <td>15/02/11 15:36:05</td>   <td>58437</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="6481f5">  <td>15/02/10 21:41:05</td>   <td>58814</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@480d3575]">&lt;&lt;quit</td> 
+<tr bgcolor="956de9">  <td>15/02/11 15:36:05</td>   <td>58643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
+  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/11 15:36:10</td>   <td>63485</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/11 15:36:10</td>   <td>63530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
+  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/11 15:36:15</td>   <td>69114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
+  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/11 15:36:20</td>   <td>74293</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>15/02/11 15:36:21</td>   <td>74704</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@480d3575]">&lt;&lt;quit</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
 </table>
