--- a/test-output/old/JagdPantherSuit/methods.html
+++ b/test-output/old/JagdPantherSuit/methods.html
@@ -1,56 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>JagdPantherSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6481f5">  <td>15/02/11 17:38:43</td>   <td>0</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@480d3575]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:47</td>   <td>3774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:52</td>   <td>9041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:52</td>   <td>9082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:57</td>   <td>14145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 17:38:58</td>   <td>14346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 17:38:58</td>   <td>14773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">createPeriod</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 17:39:06</td>   <td>22983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 17:39:06</td>   <td>22992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 17:39:06</td>   <td>23178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">createPeriod</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 17:39:15</td>   <td>31560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 17:39:15</td>   <td>31610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 17:39:15</td>   <td>31939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 17:39:23</td>   <td>39384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 17:39:23</td>   <td>39482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 17:39:23</td>   <td>39825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 17:39:31</td>   <td>47447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/11 17:39:31</td>   <td>47636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/11 17:39:36</td>   <td>52669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/11 17:39:36</td>   <td>52711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/11 17:39:41</td>   <td>57437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 17:39:41</td>   <td>57444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 17:39:46</td>   <td>62778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 17:39:46</td>   <td>62803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
-  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 17:39:51</td>   <td>67838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="6481f5">  <td>15/02/11 17:39:51</td>   <td>68279</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@480d3575]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/02/17 21:29:53</td>   <td>0</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@30f842ca]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/17 21:29:55</td>   <td>2851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@7b4c50bc]">createProgram</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/17 21:30:00</td>   <td>7897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@7b4c50bc]">createProgram</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/17 21:30:05</td>   <td>12383</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@7b4c50bc]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/17 21:30:05</td>   <td>12460</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@4d15107f]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/17 21:30:05</td>   <td>12845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@4d15107f]">createPeriod</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/17 21:30:13</td>   <td>20509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@4d15107f]">createPeriod</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/17 21:30:21</td>   <td>28040</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@4d15107f]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/17 21:30:21</td>   <td>28159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@7e990ed7]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/17 21:30:21</td>   <td>28452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@7e990ed7]">createApplicant</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/17 21:30:27</td>   <td>34782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@7e990ed7]">createApplicant</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/17 21:30:34</td>   <td>41596</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@7e990ed7]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="ceb1a5">  <td>15/02/17 21:30:34</td>   <td>41827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@c05fddc]">createNewStage</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="ceb1a5">  <td>15/02/17 21:30:40</td>   <td>47135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@c05fddc]">createNewStage</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="ceb1a5">  <td>15/02/17 21:30:44</td>   <td>51951</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@c05fddc]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="6d8795">  <td>15/02/17 21:30:45</td>   <td>51987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@5fb759d6]">createNewUser</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="6d8795">  <td>15/02/17 21:30:49</td>   <td>56713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@5fb759d6]">createNewUser</td> 
+  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="6d8795">  <td>15/02/17 21:30:54</td>   <td>60962</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/02/17 21:30:54</td>   <td>61298</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@30f842ca]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1954985045</td>   <td></td> </tr>
 </table>
