--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7dea0">  <td>15/02/10 14:04:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@3f2a3a5]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1535634836</td>   <td></td> </tr>
-<tr bgcolor="b7dea0">  <td>15/02/10 14:04:30</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@3f2a3a5]">createPeriod</td> 
-  <td>main@1535634836</td>   <td></td> </tr>
-<tr bgcolor="b7dea0">  <td>15/02/10 14:04:30</td>   <td>2953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@3f2a3a5]">createPeriod</td> 
-  <td>main@1535634836</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/13 10:55:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:test.NewTest@1ae369b7]">f</td> 
+  <td>main@762218386</td>   <td></td> </tr>
 </table>
